--- a/_site.yml
+++ b/_site.yml
@@ -11,5 +11,9 @@ navbar:
       href: about.html
     - text: "Blog"
       href: blog.html
+    - text: "Resume"
+      href: resumeforwebsite.html
+    - text: "R Squared"
+      href: Rsquaredforwebsite.html
 output: distill::distill_article
-theme: postcards.css
+theme: profhunt.css
