--- a/_site.yml
+++ b/_site.yml
@@ -9,10 +9,11 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+      menu:
+        - text: "Resume"
+          href: resumeforwebsite.html
     - text: "Blog"
       href: blog.html
-    - text: "Resume"
-      href: resumeforwebsite.html
     - text: "R Squared"
       href: Rsquaredforwebsite.html
 output: distill::distill_article
