--- a/_site.yml
+++ b/_site.yml
@@ -18,6 +18,6 @@ navbar:
         - text: "Machine Learning Model"
           href: machinelearning.html
         - text: "Final Project"
-          href: finalproject.html
+          href: absenteeism_at_work.html
 output: distill::distill_article
 theme: profhunt.css
